syntax = "proto3";

package greet;

option go_package = "github.com/lordsonvimal/golang-grpc/greet/proto";

message GreetRequest {
  string first_name = 1;
}

message GreetResponse {
  string result = 1;
}

service GreetService {
  rpc Greet (GreetRequest) returns (GreetResponse);
  rpc GreetStream (GreetRequest) returns (stream GreetResponse);
  rpc GreetClientStream (stream GreetRequest) returns (GreetResponse);
  rpc GreetBiDirectionStream (stream GreetRequest) returns (stream GreetResponse);
}
